[tool.poetry]
name = "Buhler_Data_Science"
version = "0.1.0"
description = ""
authors = ["Cian Murphy <cian.murphy@buhlergroup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
notebook = "^6.0.3"
jupyterlab = "^2.2.2"
numpy = "^1.19.2"
pandas = "^1.1.3"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
